--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.0",
     "add": "^2.0.6",
+    "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
