--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "add": "^2.0.6",
     "dayjs": "^1.10.7",
+    "msw": "^0.35.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
     "yarn": "^1.22.11"
   },
   "scripts": {
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
